cpp/libsupra_ansi/include/supra/ansi.h

typedef struct supra_ansi_color {
    uint8_t kind; 
    uint8_t index;
    uint8_t r;
    uint8_t g;
    uint8_t b;
} supra_ansi_color;
typedef struct supra_ansi_style {
    uint32_t attrs; 
    supra_ansi_color fg;
    supra_ansi_color bg;
    supra_ansi_color underline_color;
    uint8_t underline; 
    uint8_t hyperlink_open;
} supra_ansi_style;
supra_ansi_style supra_ansi_style_default(void);
int supra_ansi_style_is_default(const supra_ansi_style* style);
size_t supra_ansi_style_emit(const supra_ansi_style* style, uint8_t* out, size_t cap);
size_t supra_ansi_style_emit_reset(const supra_ansi_style* style, uint8_t* out, size_t cap);
typedef struct supra_ansi_token {
    uint8_t kind; 
    size_t offset;
    size_t length;
    uint8_t final_byte;
    uint8_t intermediates[2];
    uint8_t intermediate_count;
    int32_t params[SUPRA_ANSI_MAX_PARAMS];
    uint8_t param_count;
    uint8_t params_dropped;
    int32_t subparams[SUPRA_ANSI_MAX_SUBPARAMS];
    uint8_t subparam_index[SUPRA_ANSI_MAX_PARAMS];
    uint8_t subparam_count[SUPRA_ANSI_MAX_PARAMS];
    uint8_t payload[SUPRA_ANSI_MAX_PAYLOAD];
    uint16_t payload_len;
    size_t payload_full;
} supra_ansi_token;
typedef struct supra_ansi_scanner {
    uint8_t state;
    size_t pos;
    uint8_t buffer_done;
    uint8_t utf8_expect;
    uint8_t intermediates[2];
    uint8_t intermediate_count;
    int32_t params[SUPRA_ANSI_MAX_PARAMS];
    uint8_t param_count;
    uint8_t params_dropped;
    uint8_t param_has_digits;
    uint8_t in_subparam;
    int32_t subparams[SUPRA_ANSI_MAX_SUBPARAMS];
    uint8_t subparam_total;
    uint8_t subparam_index[SUPRA_ANSI_MAX_PARAMS];
    uint8_t subparam_count[SUPRA_ANSI_MAX_PARAMS];
    uint8_t payload[SUPRA_ANSI_MAX_PAYLOAD];
    uint16_t payload_len;
    size_t payload_full;
    size_t carried;
} supra_ansi_scanner;
typedef enum supra_ansi_eof {
    SUPRA_ANSI_MORE = 0,
    SUPRA_ANSI_FINAL = 1
} supra_ansi_eof;
void supra_ansi_scanner_init(supra_ansi_scanner* scanner);
int supra_ansi_scanner_pending(const supra_ansi_scanner* scanner);
int supra_ansi_scan(supra_ansi_scanner* scanner, const uint8_t* bytes, size_t len,
                    supra_ansi_eof eof, supra_ansi_token* out);
int supra_ansi_style_apply(supra_ansi_style* style, const supra_ansi_token* token);
int supra_ansi_style_apply_osc(supra_ansi_style* style, const supra_ansi_token* token);
size_t supra_ansi_measure(const uint8_t* bytes, size_t len, supra_width_ambiguous ambiguous);
size_t supra_ansi_strip(const uint8_t* bytes, size_t len, uint8_t* out, size_t cap);
typedef struct supra_ansi_truncation {
    size_t prefix_len;
    size_t cells;
    uint8_t trailer[SUPRA_ANSI_MAX_TRAILER];
    uint8_t trailer_len;
    uint8_t truncated;
    supra_ansi_style style_at_cut;
} supra_ansi_truncation;
void supra_ansi_plan_truncate(const uint8_t* bytes, size_t len, size_t max_cells,
                              supra_width_ambiguous ambiguous, supra_ansi_truncation* out);
void supra_ansi_plan_truncate_from(const uint8_t* bytes, size_t len, size_t max_cells,
                                   supra_width_ambiguous ambiguous,
                                   const supra_ansi_style* initial, supra_ansi_truncation* out);