crates/supra_ffi/native/cpp/libsupra_sandbox/include/supra/sandbox.h


typedef struct supra_sandbox_capabilities {
    uint8_t tier;
    uint8_t landlock_abi;
    uint8_t user_namespaces;
    uint8_t network_isolation;
    uint8_t port_granular_network;
    uint8_t bubblewrap_present;
    char detail[SUPRA_SANDBOX_ERROR_LEN];
} supra_sandbox_capabilities;
void supra_sandbox_probe(supra_sandbox_capabilities* out);
void supra_sandbox_force_tier_for_testing(uint8_t tier);
typedef struct supra_sandbox_path_rule {
    const char* path;
    uint32_t access;
} supra_sandbox_path_rule;
typedef struct supra_sandbox_policy {
    supra_sandbox_path_rule paths[SUPRA_SANDBOX_MAX_PATHS];
    uint8_t path_count;
    uint8_t network;
    uint16_t allowed_ports[SUPRA_SANDBOX_MAX_PORTS];
    uint8_t port_count;
    uint8_t isolate_processes;
    uint8_t isolate_ipc;
    uint32_t max_processes;
    uint64_t max_address_space;
    uint32_t max_cpu_seconds;
    uint64_t max_file_size;
    uint8_t required_tier;
} supra_sandbox_policy;
void supra_sandbox_policy_init(supra_sandbox_policy* policy);
int supra_sandbox_policy_allow(supra_sandbox_policy* policy, const char* path, uint32_t access);
int supra_sandbox_policy_allow_port(supra_sandbox_policy* policy, uint16_t port);
typedef struct supra_sandbox_process {
    int64_t pid;
    uint8_t tier;
    uintptr_t native_process;
    uintptr_t native_job;
    char error[SUPRA_SANDBOX_ERROR_LEN];
} supra_sandbox_process;
typedef struct supra_sandbox_command {
    const char* program;
    const char* const* argv;
    const char* const* envp;
    const char* working_dir;
    int stdin_fd;
    int stdout_fd;
    int stderr_fd;
} supra_sandbox_command;