crates/supra_ffi/native/cpp/libsupra_width/include/supra/width.h


typedef enum supra_width_ambiguous {
    SUPRA_WIDTH_AMBIGUOUS_NARROW = 0,
    SUPRA_WIDTH_AMBIGUOUS_WIDE = 1
} supra_width_ambiguous;
int supra_utf8_decode(const uint8_t* bytes, size_t len, uint32_t* out_cp, size_t* consumed);
size_t supra_utf8_encoded_len(uint32_t cp);
int supra_wcwidth(uint32_t cp, supra_width_ambiguous ambiguous);
size_t supra_grapheme_next(const uint8_t* bytes, size_t len);
int supra_grapheme_width(const uint8_t* bytes, size_t len, supra_width_ambiguous ambiguous,
                         size_t* out_len);
size_t supra_wcswidth(const uint8_t* bytes, size_t len, supra_width_ambiguous ambiguous);
size_t supra_width_measure(const uint8_t* bytes, size_t len, supra_width_ambiguous ambiguous,
                           size_t* out_clusters);
size_t supra_width_truncate(const uint8_t* bytes, size_t len, size_t max_cells,
                            supra_width_ambiguous ambiguous, size_t* out_cells);
typedef enum supra_width_validity {
    SUPRA_WIDTH_VALID = 0,
    SUPRA_WIDTH_INVALID_UTF8 = 1,
    SUPRA_WIDTH_HAS_NONPRINTABLE = 2
} supra_width_validity;
supra_width_validity supra_width_validate(const uint8_t* bytes, size_t len, size_t* out_offset);
int supra_width_probe(const char* utf8, supra_width_ambiguous ambiguous);
const char* supra_width_unicode_version(void);