crates/supra_ffi/src/sys.rs

//! Raw declarations for the C ABI. **The only module containing `extern`
//! blocks.**
//!
//! Nothing here is public outside the crate: every item is `pub(crate)`, so the
//! raw structures cannot leak into a caller's types. If a downstream crate could
//! name `supra_ansi_token`, the confinement of `unsafe` to this crate would be
//! nominal rather than real - the caller would end up writing its own unsafe code
//! to use it.
//!
//! Declarations are hand-written rather than generated by bindgen. The ABI is
//! small, stable, and authored in this repository, so a code generator would add
//! a build dependency and a moving part for no benefit. The cost of hand-writing
//! is drift, and that cost is paid down by the compile-time layout assertions
//! below plus the matching `static_assert`s in `abi_check.cpp`.

#![allow(non_camel_case_types)]

use core::ffi::{c_char, c_int, c_void};

/// Layout constants shared with build.rs.
///
/// `abi_sizes.rs` is `include!`d by both this module and build.rs, and build.rs
/// needs the items at its own top level - so they are declared `pub` in the file
/// itself. Inside a private module that reads as unreachable-pub, hence the
/// targeted allow: the visibility is a requirement of the sharing mechanism, not
/// an intent to export.
#[allow(unreachable_pub)]
mod abi {
    include!("../abi_sizes.rs");
}

pub(crate) use abi::*;

// ---------------------------------------------------------------------------
// Limits, mirroring the headers
// ---------------------------------------------------------------------------

pub(crate) const ANSI_MAX_PARAMS: usize = 16;
pub(crate) const ANSI_MAX_SUBPARAMS: usize = 8;
pub(crate) const ANSI_MAX_PAYLOAD: usize = 256;
pub(crate) const ANSI_MAX_TRAILER: usize = 24;
pub(crate) const SANDBOX_MAX_PATHS: usize = 64;
pub(crate) const SANDBOX_MAX_PORTS: usize = 16;
pub(crate) const SANDBOX_ERROR_LEN: usize = 256;

// ---------------------------------------------------------------------------
// libsupra_width
// ---------------------------------------------------------------------------

/// Substituted for malformed input by the decoder.
///
/// Referenced only from tests today. Kept because these constants mirror the
/// header completely, and a partial mirror is where a wrong value gets added
/// later.
#[cfg_attr(not(test), allow(dead_code))]
pub(crate) const WIDTH_REPLACEMENT: u32 = 0xFFFD;
pub(crate) const WIDTH_NONPRINTABLE: c_int = -1;

pub(crate) const AMBIGUOUS_NARROW: c_int = 0;
pub(crate) const AMBIGUOUS_WIDE: c_int = 1;

pub(crate) const VALIDITY_VALID: c_int = 0;
pub(crate) const VALIDITY_INVALID_UTF8: c_int = 1;
pub(crate) const VALIDITY_HAS_NONPRINTABLE: c_int = 2;

unsafe extern "C" {
    pub(crate) fn supra_utf8_decode(
        bytes: *const u8,
        len: usize,
        out_cp: *mut u32,
        consumed: *mut usize,
    ) -> c_int;

    pub(crate) fn supra_utf8_encoded_len(cp: u32) -> usize;

    pub(crate) fn supra_wcwidth(cp: u32, ambiguous: c_int) -> c_int;

    pub(crate) fn supra_grapheme_next(bytes: *const u8, len: usize) -> usize;

    pub(crate) fn supra_grapheme_width(
        bytes: *const u8,
        len: usize,
        ambiguous: c_int,
        out_len: *mut usize,
    ) -> c_int;

    pub(crate) fn supra_wcswidth(bytes: *const u8, len: usize, ambiguous: c_int) -> usize;

    pub(crate) fn supra_width_measure(
        bytes: *const u8,
        len: usize,
        ambiguous: c_int,
        out_clusters: *mut usize,
    ) -> usize;

    pub(crate) fn supra_width_truncate(
        bytes: *const u8,
        len: usize,
        max_cells: usize,
        ambiguous: c_int,
        out_cells: *mut usize,
    ) -> usize;

    pub(crate) fn supra_width_validate(bytes: *const u8, len: usize, out_offset: *mut usize) -> c_int;

    pub(crate) fn supra_width_probe(utf8: *const c_char, ambiguous: c_int) -> c_int;

    pub(crate) fn supra_width_unicode_version() -> *const c_char;
}

// ---------------------------------------------------------------------------
// libsupra_ansi
// ---------------------------------------------------------------------------

pub(crate) const ANSI_TOKEN_TEXT: u8 = 0;
pub(crate) const ANSI_TOKEN_CONTROL: u8 = 1;
pub(crate) const ANSI_TOKEN_CSI: u8 = 2;
pub(crate) const ANSI_TOKEN_ESC: u8 = 3;
pub(crate) const ANSI_TOKEN_OSC: u8 = 4;
pub(crate) const ANSI_TOKEN_DCS: u8 = 5;
pub(crate) const ANSI_TOKEN_APC: u8 = 6;
pub(crate) const ANSI_TOKEN_PARTIAL: u8 = 7;
pub(crate) const ANSI_TOKEN_MALFORMED: u8 = 8;

pub(crate) const ANSI_EOF_MORE: c_int = 0;
pub(crate) const ANSI_EOF_FINAL: c_int = 1;

pub(crate) const ANSI_COLOR_DEFAULT: u8 = 0;
pub(crate) const ANSI_COLOR_INDEXED: u8 = 1;
pub(crate) const ANSI_COLOR_RGB: u8 = 2;

#[repr(C)]
#[derive(Clone, Copy, Debug, PartialEq, Eq)]
pub(crate) struct supra_ansi_color {
    pub kind: u8,
    pub index: u8,
    pub r: u8,
    pub g: u8,
    pub b: u8,
}

#[repr(C)]
#[derive(Clone, Copy, Debug, PartialEq, Eq)]
pub(crate) struct supra_ansi_style {
    pub attrs: u32,
    pub fg: supra_ansi_color,
    pub bg: supra_ansi_color,
    pub underline_color: supra_ansi_color,
    pub underline: u8,
    pub hyperlink_open: u8,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_ansi_token {
    pub kind: u8,
    pub offset: usize,
    pub length: usize,
    pub final_byte: u8,
    pub intermediates: [u8; 2],
    pub intermediate_count: u8,
    pub params: [i32; ANSI_MAX_PARAMS],
    pub param_count: u8,
    pub params_dropped: u8,
    pub subparams: [i32; ANSI_MAX_SUBPARAMS],
    pub subparam_index: [u8; ANSI_MAX_PARAMS],
    pub subparam_count: [u8; ANSI_MAX_PARAMS],
    pub payload: [u8; ANSI_MAX_PAYLOAD],
    pub payload_len: u16,
    pub payload_full: usize,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_ansi_scanner {
    pub state: u8,
    pub pos: usize,
    pub buffer_done: u8,
    pub utf8_expect: u8,
    pub intermediates: [u8; 2],
    pub intermediate_count: u8,
    pub params: [i32; ANSI_MAX_PARAMS],
    pub param_count: u8,
    pub params_dropped: u8,
    pub param_has_digits: u8,
    pub in_subparam: u8,
    pub subparams: [i32; ANSI_MAX_SUBPARAMS],
    pub subparam_total: u8,
    pub subparam_index: [u8; ANSI_MAX_PARAMS],
    pub subparam_count: [u8; ANSI_MAX_PARAMS],
    pub payload: [u8; ANSI_MAX_PAYLOAD],
    pub payload_len: u16,
    pub payload_full: usize,
    pub carried: usize,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_ansi_truncation {
    pub prefix_len: usize,
    pub cells: usize,
    pub trailer: [u8; ANSI_MAX_TRAILER],
    pub trailer_len: u8,
    pub truncated: u8,
    pub style_at_cut: supra_ansi_style,
}

unsafe extern "C" {
    pub(crate) fn supra_ansi_style_default() -> supra_ansi_style;
    pub(crate) fn supra_ansi_style_is_default(style: *const supra_ansi_style) -> c_int;
    pub(crate) fn supra_ansi_style_emit(style: *const supra_ansi_style, out: *mut u8, cap: usize) -> usize;
    pub(crate) fn supra_ansi_style_emit_reset(
        style: *const supra_ansi_style,
        out: *mut u8,
        cap: usize,
    ) -> usize;

    pub(crate) fn supra_ansi_scanner_init(scanner: *mut supra_ansi_scanner);
    pub(crate) fn supra_ansi_scanner_pending(scanner: *const supra_ansi_scanner) -> c_int;
    pub(crate) fn supra_ansi_scan(
        scanner: *mut supra_ansi_scanner,
        bytes: *const u8,
        len: usize,
        eof: c_int,
        out: *mut supra_ansi_token,
    ) -> c_int;

    pub(crate) fn supra_ansi_style_apply(
        style: *mut supra_ansi_style,
        token: *const supra_ansi_token,
    ) -> c_int;
    pub(crate) fn supra_ansi_style_apply_osc(
        style: *mut supra_ansi_style,
        token: *const supra_ansi_token,
    ) -> c_int;

    pub(crate) fn supra_ansi_measure(bytes: *const u8, len: usize, ambiguous: c_int) -> usize;
    pub(crate) fn supra_ansi_strip(bytes: *const u8, len: usize, out: *mut u8, cap: usize) -> usize;

    pub(crate) fn supra_ansi_plan_truncate(
        bytes: *const u8,
        len: usize,
        max_cells: usize,
        ambiguous: c_int,
        out: *mut supra_ansi_truncation,
    );
    pub(crate) fn supra_ansi_plan_truncate_from(
        bytes: *const u8,
        len: usize,
        max_cells: usize,
        ambiguous: c_int,
        initial: *const supra_ansi_style,
        out: *mut supra_ansi_truncation,
    );
}

// ---------------------------------------------------------------------------
// descriptor hygiene (fcntl)
//
// POSIX-fixed commands and flags for the T16 fd primitive, declared by hand
// like every other foreign call in this crate. These are not part of the
// libsupra_* ABI; they are the one libc call with no C++ source beneath it,
// and fd.rs records why. Values are stable across POSIX platforms.
// ---------------------------------------------------------------------------

pub(crate) const F_GETFD: c_int = 1;
pub(crate) const F_SETFD: c_int = 2;
pub(crate) const FD_CLOEXEC: c_int = 1;

// ---------------------------------------------------------------------------
// libsupra_sandbox
// ---------------------------------------------------------------------------

pub(crate) const SANDBOX_TIER_NONE: u8 = 0;
pub(crate) const SANDBOX_TIER_NAMESPACES: u8 = 1;
pub(crate) const SANDBOX_TIER_LANDLOCK: u8 = 2;
pub(crate) const SANDBOX_TIER_SBPL: u8 = 3;
pub(crate) const SANDBOX_TIER_APPCONTAINER: u8 = 4;
pub(crate) const SANDBOX_TIER_UNSET: u8 = 255;

pub(crate) const SANDBOX_READ: u32 = 1 << 0;
pub(crate) const SANDBOX_WRITE: u32 = 1 << 1;
pub(crate) const SANDBOX_EXECUTE: u32 = 1 << 2;
pub(crate) const SANDBOX_MANAGE: u32 = 1 << 3;

pub(crate) const SANDBOX_NET_NONE: u8 = 0;
pub(crate) const SANDBOX_NET_PORTS: u8 = 1;
pub(crate) const SANDBOX_NET_FULL: u8 = 2;

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_sandbox_capabilities {
    pub tier: u8,
    pub landlock_abi: u8,
    pub user_namespaces: u8,
    pub network_isolation: u8,
    pub port_granular_network: u8,
    pub bubblewrap_present: u8,
    pub detail: [c_char; SANDBOX_ERROR_LEN],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_sandbox_path_rule {
    pub path: *const c_char,
    pub access: u32,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_sandbox_policy {
    pub paths: [supra_sandbox_path_rule; SANDBOX_MAX_PATHS],
    pub path_count: u8,
    pub network: u8,
    pub allowed_ports: [u16; SANDBOX_MAX_PORTS],
    pub port_count: u8,
    pub isolate_processes: u8,
    pub isolate_ipc: u8,
    pub max_processes: u32,
    pub max_address_space: u64,
    pub max_cpu_seconds: u32,
    pub max_file_size: u64,
    pub required_tier: u8,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_sandbox_process {
    pub pid: i64,
    pub tier: u8,
    pub error: [c_char; SANDBOX_ERROR_LEN],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub(crate) struct supra_sandbox_command {
    pub program: *const c_char,
    pub argv: *const *const c_char,
    pub envp: *const *const c_char,
    pub working_dir: *const c_char,
    pub stdin_fd: c_int,
    pub stdout_fd: c_int,
    pub stderr_fd: c_int,
}

unsafe extern "C" {
    pub(crate) fn supra_sandbox_probe(out: *mut supra_sandbox_capabilities);
    pub(crate) fn supra_sandbox_force_tier_for_testing(tier: u8);

    pub(crate) fn supra_sandbox_policy_init(policy: *mut supra_sandbox_policy);
    pub(crate) fn supra_sandbox_policy_allow(
        policy: *mut supra_sandbox_policy,
        path: *const c_char,
        access: u32,
    ) -> c_int;
    pub(crate) fn supra_sandbox_policy_allow_port(policy: *mut supra_sandbox_policy, port: u16) -> c_int;
